# web-sample

./: README.md  docker-compose.yml
backend/: .env  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
backend/migrations/: 20240922094600_create_samples.up.sql  20240922095010_add_status_to_samples.down.sql  20240922095010_add_status_to_samples.up.sql
backend/src/: main.rs
backend/tools/: .crates.toml  .crates2.json
frontend/: README.md  package-lock.json  package.json
frontend/src/routes/: +page.svelte
