[package]
name = "web-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4.9.0"
actix-cors = "^0.7.0"
serde = { version = "^1.0.210",  features = ["derive"] }
serde_json = "^1.0.128"
sqlx = { version = "^0.8.2", features = ["runtime-tokio", "mysql"] }
anyhow = "^1.0.89"
env_logger = "^0.11.5"
